fixed layout issue in desktop for successful reset page and made a backup css file for old color themes

--- a/mobile-friendly/mf-css/login.css
+++ b/mobile-friendly/mf-css/login.css
@@ -221,6 +221,16 @@
         text-align: center;
         margin-bottom: 1em;
     }
+
+
+
+    .reset-pass-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 2em;
+    }
 }
 @media only screen and (min-width: 720px) {
     .login-container, .profile-wrapper, .reset-content {
@@ -282,20 +292,20 @@
     }
 
 
-    .account-wrapper, .content-wrapper, .reset-wrapper {
+    .account-wrapper, .content-wrapper, .reset-wrapper, .reset-pass-wrapper {
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100vw;
         height: 90vh;
     }
-    #signup, .profile-wrapper, .reset-content {
+    #signup, .profile-wrapper, .reset-content, .reset-pass-content {
         background-color: var(--accent-1);
         border-radius: 12px;
         border: 2px solid var(--accent-3);
         align-items: center;
     }
-    .input-warpper {
+    .input-warpper, .reset-pass-content {
         width: 70%;
     }
 
